@@ -332,7 +332,7 @@ Description: GObject introspection data for the WebKit library
  It can be used by packages using the GIRepository format to generate
  dynamic bindings.
 
-Package: libwebkit2gtk-3.0-0
+Package: libwebkit2gtk-3.0-25
 Section: libs
 Architecture: any
 Depends: libjavascriptcoregtk-3.0-0 (= ${binary:Version}),
@@ -357,7 +357,7 @@ Package: libwebkit2gtk-3.0-dev
 Section: libdevel
 Priority: extra
 Architecture: any
-Depends: libwebkit2gtk-3.0-0 (= ${binary:Version}),
+Depends: libwebkit2gtk-3.0-25 (= ${binary:Version}),
          gir1.2-webkit2-3.0 (= ${binary:Version}),
          libgtk-3-dev,
          libsoup2.4-dev (>= 2.40),
@@ -374,11 +374,11 @@ Description: Web content engine library for GTK+ - Development files
  This package provides development files required to create GTK+ applications
  embedding WebKit.
 
-Package: libwebkit2gtk-3.0-0-dbg
+Package: libwebkit2gtk-3.0-25-dbg
 Section: debug
 Priority: extra
 Architecture: any
-Depends: libwebkit2gtk-3.0-0 (= ${binary:Version}),
+Depends: libwebkit2gtk-3.0-25 (= ${binary:Version}),
          libjavascriptcoregtk-3.0-0-dbg (= ${binary:Version}),
          ${misc:Depends}
 Description: Web content engine library for GTK+ - Debugging symbols
