@@ -33,7 +33,7 @@ ifeq ($(ENABLE_WEBKIT2),yes)
 	EXTRA_CONFIGURE_ARGUMENTS = --enable-webkit2 --libexecdir=/usr/lib/webkit2gtk-3.0/libexec
 else
 	EXTRA_CONFIGURE_ARGUMENTS = --disable-webkit2 --disable-plugin-process
-	EXTRA_DH_ARGUMENTS = -Nlibwebkit2gtk-3.0-0 -Nlibwebkit2gtk-3.0-dev -Nlibwebkit2gtk-3.0-0-dbg -Ngir1.2-webkit2-3.0
+	EXTRA_DH_ARGUMENTS = -Nlibwebkit2gtk-3.0-25 -Nlibwebkit2gtk-3.0-dev -Nlibwebkit2gtk-3.0-25-dbg -Ngir1.2-webkit2-3.0
 endif
 
 # Sacrifice speed in order to make it more likely resource limits
@@ -214,9 +214,9 @@ ifeq (3.0,$(filter 3.0,$(GTK_VERSIONS)))
 	dh_install -plibwebkitgtk-3.0-0-dbg --sourcedir=debian/tmp-3.0
 	dh_install -pgir1.2-webkit-3.0 --sourcedir=debian/tmp-3.0
 ifeq ($(ENABLE_WEBKIT2),yes)
-	dh_install -plibwebkit2gtk-3.0-0 --sourcedir=debian/tmp-3.0
+	dh_install -plibwebkit2gtk-3.0-25 --sourcedir=debian/tmp-3.0
 	dh_install -plibwebkit2gtk-3.0-dev --sourcedir=debian/tmp-3.0
-	dh_install -plibwebkit2gtk-3.0-0-dbg --sourcedir=debian/tmp-3.0
+	dh_install -plibwebkit2gtk-3.0-25-dbg --sourcedir=debian/tmp-3.0
 	dh_install -pgir1.2-webkit2-3.0 --sourcedir=debian/tmp-3.0
 endif
 endif
@@ -229,7 +229,7 @@ ifeq (3.0,$(filter 3.0,$(GTK_VERSIONS)))
 	dh_strip -plibjavascriptcoregtk-3.0-0 --dbg-package=libjavascriptcoregtk-3.0-0-dbg
 	dh_strip -plibwebkitgtk-3.0-0 --dbg-package=libwebkitgtk-3.0-0-dbg
 ifeq ($(ENABLE_WEBKIT2),yes)
-	dh_strip -plibwebkit2gtk-3.0-0 --dbg-package=libwebkit2gtk-3.0-0-dbg
+	dh_strip -plibwebkit2gtk-3.0-25 --dbg-package=libwebkit2gtk-3.0-25-dbg
 endif
 endif
 	dh_compress -a $(EXTRA_DH_ARGUMENTS)
@@ -246,7 +246,7 @@ ifeq (3.0,$(filter 3.0,$(GTK_VERSIONS)))
 	dh_girepository --package=gir1.2-javascriptcoregtk-3.0
 	dh_girepository --package=gir1.2-webkit-3.0
 ifeq ($(ENABLE_WEBKIT2),yes)
-	dh_makeshlibs -plibwebkit2gtk-3.0-0 -V 'libwebkit2gtk-3.0-0 (>= 1.11.90)' -- -c4
+	dh_makeshlibs -plibwebkit2gtk-3.0-25 -V 'libwebkit2gtk-3.0-25 (>= 1.11.90)' -- -c4
 	dh_girepository --package=gir1.2-webkit2-3.0
 endif
 endif
