@@ -15,6 +15,10 @@ webkitgtk (2.0.2-1) experimental; urgency=low
     + debian/rules:
       - Re-enable parallel build support, the above patches should
         make it work.
+    + debian/libwebkit2gtk-3.0-{0,25}.install,
+      debian/control,
+      debian/rules:
+      - Renamed libwebkit2gtk-3.0-0 to libwebkit2gtk-3.0-25.
   * debian/watch:
     + Updated to work with the new page.
   * debian/rules:
